# pospell

./: .pre-commit-hooks.yaml  .pylintrc  CHANGELOG.md  README.md  pospell.py  requirements-dev.in  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: tests.yml
tests/: test_pospell.py
tests/expected_to_fail/: 1.po  issue19.po
tests/expected_to_success/: 1.po  accronyms.po  hour.po  issue21.po  versions.po
