[bumpversion]
current_version = 1.0.11
commit = True
tag = True

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:pospell.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
name = pospell
version = 1.0.11
author = Julien Palard
author_email = julien@palard.fr
license = MIT license
description = Spellcheck .po files containing reStructuredText translations
keywords =
    po
    spell
    gettext
    reStructuredText
    check
    sphinx
    translation
url = https://github.com/AFPy/pospell
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
py_modules = pospell
install_requires = polib; docutils>=0.11; regex

[options.entry_points]
console_scripts = pospell=pospell:main
