[metadata]
name = pospell
version = attr: pospell.__version__
author = Julien Palard
author_email = julien@palard.fr
license = MIT license
description = Spellcheck .po files containing reStructuredText translations
keywords =
    po
    spell
    gettext
    reStructuredText
    check
    sphinx
    translation
url = https://github.com/AFPy/pospell
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3

[options]
py_modules = pospell
install_requires = polib; docutils>=0.11,<0.18; regex

[options.entry_points]
console_scripts = pospell=pospell:main
